<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>
    <string name="media_dialog">Media preview</string>
    <string name="dir_info">Folder Information</string>
    <string name="manager_act">Phone Management</string>

    <string name="Play">Play</string>
    <string name="Close">Close</string>
    <string name="Backup_all">Backup all</string>
    <string name="Email_Developer">Email Developer</string>
    <string name="Website">Website</string>
    <string name="Number_of_folders">Number of folders:</string>
    <string name="Number_of_files">Number of files:</string>
    <string name="Last_Modified">Last Modified:</string>
    <string name="Total_size">Total size:</string>
    <string name="Used_space">Used space:</string>
    <string name="Back">Back</string>
    <string name="Zip_folder">Zip folder</string>
    <string name="path_will_go_here">path will go here</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="path_is">path is</string>
    <string name="Attach">Attach</string>
    <string name="Delete">Delete</string>
    <string name="Copy">Copy</string>
    <string name="Move">Move</string>
    <string name="Display">Display</string>
    <string name="Text_color">Text color</string>
    <string name="Change_the_preferred_text_color">Change the preferred text color</string>
    <string name="Show_hidden_files_folders">Show hidden files/folders</string>
    <string name="Display_f_f">Display files and folders that begin with a (period)</string>
    <string name="Show_Image_Preview">Show Image Preview</string>
    <string name="Display_thumbnail">Display a thumbnail for image files</string>
    <string name="Show_Storage_Banner">Show Storage Banner</string>
    <string name="Display_sdcard_information">Display sdcard storage information</string>
    <string name="Sorting">Sorting</string>
    <string name="Sorting_type">Sorting type</string>
    <string name="Choose_sort_type">Choose how to sort files and folders</string>
    
    <string name="usb_in">usb in</string>
    <string name="usb_out">usb out</string>
    <string name="sdcard_in">sdcard in</string>
    <string name="sdcard_out">sdcard out</string>
    <string name="Multi_select_off">Multi-select off</string>
    <string name="flash_in">extern sdcard in</string>
    <string name="flash_out">extern sdcard out</string>
    
    <string name="open_file">select the type of file</string>
    <string name="text">text</string>
    <string name="audio">audio</string>
    <string name="video">video</string>
    <string name="image">image</string>
    
    <string name="New_Directory">New Directory</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Quit">Quit</string>
    
    <string name="Folder_operations">Folder operations</string>
    <string name="Delete_Folder">Delete Folder</string>
    <string name="Rename_Folder">Rename Folder</string>
    <string name="Copy_Folder">Copy Folder</string>
    <string name="Move_Folder">Move(Cut) Folder</string>
    <string name="Zip_Folder">Zip Folder</string>
    <string name="Paste_into_folder">Paste into folder</string>
    <string name="Extract_here">Extract here</string>
    
    <string name="File_Operations">File Operations</string>
    <string name="Delete_File">Delete File</string>
    <string name="Rename_File">Rename File</string>
    <string name="Copy_File">Copy File</string>
    <string name="Move_File">Move(Cut) File</string>
    <string name="Email_File">Email File</string>
    
    <string name="Warning">Warning</string>
    <string name="Deleting">Deleting </string>
    <string name="cannot_be_undone"> cannot be undone. Are you sure you want to delete?</string>
    <string name="Holding">Holding </string>
    <string name="no_permission">You do not have permission to unzip</string>
    
    <string name="Create_Directory">Create New Directory</string>
    <string name="Folder">Folder </string>
    <string name="created"> created</string>
    <string name="not_created">New folder was not created</string>
    <string name="Rename">Rename</string>
    <string name="be_renamed"> was renamed to </string>
    <string name="not_renamed"> was not renamed</string>
    <string name="Search_file">Search for a file</string>
    
    <string name="Press_back">Press back again to quit.</string>
    
    <string name="White">White</string>
    <string name="Magenta">Magenta</string>
    <string name="Yellow">Yellow</string>
    <string name="Red">Red</string>
    <string name="Cyan">Cyan</string>
    <string name="Blue">Blue</string>
    <string name="Green">Green</string>
    <string name="Change_text_color">Change text color</string>
    <string name="Sort_by">Sort by...</string>
    <string name="None">None</string>
    <string name="Alphabetical">Alphabetical</string>
    <string name="Type">Type</string>
    
</resources>
